Added more changes for all files.

--- a/about.html
+++ b/about.html
@@ -38,9 +38,10 @@
         I dedicate my time to learning new techniques, documenting my findings, and sharing knowledge with the community.
       </p>
       <p>
-        Through platforms like HackTheBox, TryHackMe, and CTF competitions, I continuously sharpen my skills in 
+        Through platforms like HackTheBox, TryHackMe, and CTF competitions, I continuously try to sharpen my skills in 
         areas including network penetration testing, web application security, privilege escalation, and cryptography.
       </p>
+      <p>I'm by far not an expert in all the areas of cybersecurity, but I am committed to continuous learning and improvement.</p>
       <p>
         This portfolio serves as a documentation of my learning journey and a resource for others interested in cybersecurity. 
         Each writeup represents a challenge overcome and a lesson learned.
@@ -55,14 +56,14 @@
       <div class="about-profile-section">
         <img src="assets/media/profile.jpg" alt="Profile Picture" class="about-profile-pic">
         <h2 class="about-profile-name">voidwr</h2>
-        <p class="about-profile-subtitle">Cybersecurity Enthusiast | CTF Player | Penetration Tester</p>
+        <p class="about-profile-subtitle">Cybersecurity Enthusiast | CTF Player</p>
         
         <div class="about-social-links">
           <a href="https://github.com/makrjames" target="_blank" class="about-social-link">
             <div class="about-social-icon"><i class="fab fa-github"></i></div>
             <span class="about-social-label">GitHub</span>
           </a>
-          <a href="https://linkedin.com" target="_blank" class="about-social-link">
+          <a href="https://www.linkedin.com/in/dimitris-makridis/" target="_blank" class="about-social-link">
             <div class="about-social-icon"><i class="fab fa-linkedin"></i></div>
             <span class="about-social-label">LinkedIn</span>
           </a>
