--- a/writeups.html
+++ b/writeups.html
@@ -33,7 +33,7 @@
     <span class="writeups-search-icon">🔍</span>
   </div>
 
-  <!-- Categories populated by main.js from writeups.json -->
+  <!-- Categories populated by main.js -->
 
 </section>
 <script src="assets/js/main.js"></script>
