Changed profile from jpg to png Added a new profile picture

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
       
       <!-- PROFILE SECTION -->
       <div class="about-profile-section">
-        <img src="assets/media/profile.jpg" alt="Profile Picture" class="about-profile-pic">
+        <img src="assets/media/profile.png" alt="Profile Picture" class="about-profile-pic">
         <h2 class="about-profile-name">voidwr</h2>
         <p class="about-profile-subtitle">Cybersecurity Enthusiast | CTF Player</p>
         
