--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="hero-content">
     <div class="hero-profile-container">
       <div class="hero-image-frame">
-        <img src="assets/media/profile.jpg" alt="voidwr profile" class="hero-profile-img">
+        <img src="assets/media/profile.png" alt="voidwr profile" class="hero-profile-img">
       </div>
       <div class="hero-profile-socials">
         <a href="https://github.com/makrjames" target="_blank" class="hero-social-icon">
