created expressway writeup and added files

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="hero-text">
       <h1>voidwr</h1>
       <p class="tagline">Cybersecurity Writeups</p>
-      <p class="description">In-depth solutions, techniques, and learnings from Capture The Flag competitions and security challenges</p>
+      <p class="description">In-depth guides, for various challenges and boxes from HTB, THM or CTF competitions</p>
       <a href="writeups.html" class="cta-button">Explore Writeups</a>
     </div>
   </div>
