fix: Changed github href to actually point to Github profile

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         <p class="about-profile-subtitle">Cybersecurity Enthusiast | CTF Player</p>
         
         <div class="about-social-links">
-          <a href="https://github.com/makrjames" target="_blank" class="about-social-link">
+          <a href="https://github.com/voidwr" target="_blank" class="about-social-link">
             <div class="about-social-icon"><i class="fab fa-github"></i></div>
             <span class="about-social-label">GitHub</span>
           </a>
