--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <img src="assets/media/profile.png" alt="voidwr profile" class="hero-profile-img">
       </div>
       <div class="hero-profile-socials">
-        <a href="https://github.com/makrjames" target="_blank" class="hero-social-icon">
+        <a href="https://github.com/voidwr" target="_blank" class="hero-social-icon">
           <i class="fab fa-github"></i>
         </a>
         <a href="https://www.linkedin.com/in/dimitris-makridis/" target="_blank" class="hero-social-icon">
