fix: Changed some html code to display image properly

--- a/writeups/htb/expressway/expressway.html
+++ b/writeups/htb/expressway/expressway.html
@@ -36,7 +36,7 @@
     <h2>Overview</h2>
     <div class="writeup-banner-full-width">
       <a href="https://labs.hackthebox.com/achievement/machine/2418005/736" target="_blank">
-        <img src="/writeups/htb/expressway/media/info.png" alt="Expressway Solved Banner" class="writeup-banner-link">
+        <img src="/writeups/htb/expressway/media/info.PNG" alt="Expressway Solved Banner" class="writeup-banner-link">
       </a>
     </div>
     <p>Expressway is an easy HackTheBox machine focused on the Internet Key Exchange (IKE) protocol vulnerabilities. As we will see 
