--- a/writeups/htb/codeparttwo/codeparttwo.html
+++ b/writeups/htb/codeparttwo/codeparttwo.html
@@ -505,7 +505,7 @@
     </table>
 
     <!-- REFERENCES SECTION -->
-    <h2>References & Resources</h2>
+    <h2>References</h2>
     <div class="references-grid">
       <a href="https://nvd.nist.gov/vuln/detail/CVE-2024-28397" target="_blank" class="reference-card">
         <div class="reference-icon">🌐</div>
